Adicionado funcionalidade de chamar o waze e também chamar o mapa nativo

--- a/Agenda/Base.lproj/Main.storyboard
+++ b/Agenda/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -246,6 +247,32 @@
             </objects>
             <point key="canvasLocation" x="1189.5999999999999" y="115.59220389805098"/>
         </scene>
+        <!--Mapa View Controller-->
+        <scene sceneID="96O-Um-yKD">
+            <objects>
+                <viewController storyboardIdentifier="mapa" id="HZy-HA-AVU" customClass="MapaViewController" customModule="Agenda" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Iwq-5A-eO8">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="sOK-iC-PfB">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </mapView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="aJ6-be-qjn"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sOK-iC-PfB" firstAttribute="leading" secondItem="aJ6-be-qjn" secondAttribute="leading" id="8I3-IH-JEO"/>
+                            <constraint firstItem="sOK-iC-PfB" firstAttribute="trailing" secondItem="aJ6-be-qjn" secondAttribute="trailing" id="M7r-TM-26G"/>
+                            <constraint firstItem="sOK-iC-PfB" firstAttribute="bottom" secondItem="aJ6-be-qjn" secondAttribute="bottom" id="YLy-6W-Kvp"/>
+                            <constraint firstItem="sOK-iC-PfB" firstAttribute="top" secondItem="aJ6-be-qjn" secondAttribute="top" id="iE0-DS-LWM"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="hSh-4j-Dtd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2008.8" y="115.59220389805098"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="yXs-rW-FGy">
             <objects>
@@ -266,4 +293,9 @@
     <inferredMetricsTieBreakers>
         <segue reference="9Yi-Bn-qev"/>
     </inferredMetricsTieBreakers>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
