Adicionado pinos nos mapas para identificar a localização da Alura e do aluno

--- a/Agenda/Base.lproj/Main.storyboard
+++ b/Agenda/Base.lproj/Main.storyboard
@@ -268,6 +268,9 @@
                             <constraint firstItem="sOK-iC-PfB" firstAttribute="top" secondItem="aJ6-be-qjn" secondAttribute="top" id="iE0-DS-LWM"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mapa" destination="sOK-iC-PfB" id="CWE-YS-ui7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hSh-4j-Dtd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
