--- a/Agenda/Base.lproj/Main.storyboard
+++ b/Agenda/Base.lproj/Main.storyboard
@@ -52,11 +52,18 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="Agenda" id="aoB-Jw-lAm">
                         <barButtonItem key="backBarButtonItem" title=" " id="M57-Hv-I3X"/>
-                        <barButtonItem key="leftBarButtonItem" systemItem="bookmarks" id="dzi-1s-s3a">
-                            <connections>
-                                <action selector="buttonCalculaMedia:" destination="Qhi-kM-lyB" id="1ec-Sf-IDf"/>
-                            </connections>
-                        </barButtonItem>
+                        <leftBarButtonItems>
+                            <barButtonItem systemItem="bookmarks" id="dzi-1s-s3a">
+                                <connections>
+                                    <action selector="buttonCalculaMedia:" destination="Qhi-kM-lyB" id="1ec-Sf-IDf"/>
+                                </connections>
+                            </barButtonItem>
+                            <barButtonItem systemItem="search" id="VmH-1i-FP4">
+                                <connections>
+                                    <action selector="buttonLocalizacaoGeral:" destination="Qhi-kM-lyB" id="w9d-FS-oU3"/>
+                                </connections>
+                            </barButtonItem>
+                        </leftBarButtonItems>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="4cp-jd-Mnv">
                             <connections>
                                 <segue destination="ZY7-NM-Hup" kind="show" id="tio-sZ-JlU"/>
